fix: button hover not showing up

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -106,7 +106,7 @@
 
   menu:where([_moz-menuactive="true"]:not([disabled="true"])), 
   menuitem:where([_moz-menuactive="true"]:not([disabled="true"])) {
-    background-color: var(--panel-item-hover-bgcolor) !important;
+    background-color: var(--lwt-accent-color) !important;
     color: var(--toolbarbutton-icon-fill) !important;
   }
   
